Change View Details to button, fix alignment to bottom

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,6 @@ img, embed, object, video {
   max-width: 100%;
 }
 
-
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
@@ -186,26 +185,33 @@ nav h1 a {
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
-  margin: 20px 0 10px;
+  margin: 5% 0 2.5%;
   text-transform: uppercase;
 }
+
 #restaurants-list p {
   margin: 0;
   font-size: 1rem;
+}
+
+.restaurant-empty {
   flex-grow: 1;
 }
-#restaurants-list li a {
+
+#restaurants-list li button {
   background-color: orange;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
-  font-size: 10pt;
-  margin: 15px 0 0;
-  padding: 8px 30px 10px;
+  vertical-align: bottom;
+  font-size: 1rem;
+  margin: 5% 0 0 0;
+  padding: 5% 10%;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
   align-self: flex-start;
+  
 }
 
 /* ====================== Restaurant Details ====================== */
